# MedicineClash

./: CHANGELOG.md  Main.hs  MedicineClash.cabal  README.md  cabal.project  draw.sh
.devcontainer/: devcontainer.json
src/Clash/: MedicineClash.hs
test/Clash/: MedicineClashSpec.hs
