cabal-version:       >=1.10

name:                MedicineClash
version:             0.1.0.0
author:              David
maintainer:          Gontrum@users.noreply.github.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules: Clash.MedicineClash
  hs-source-dirs: 
      src
  build-depends:       
    base >=4.14 && < 5,
    time
  default-language:    Haskell2010

executable MakeDiagram
  main-is: Main.hs
  build-depends:
    base >=4.14 && < 5
    , diagrams
    , diagrams-lib
    , time
    , diagrams-svg
    , MedicineClash
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , time
    , MedicineClash
  other-modules:
      Clash.MedicineClashSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
